# OCC

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  404.html  AGENTS.md  CHANGELOG.md  CITATION.bib  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.es.md  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  pull_request_template.md
CLI/: index.html
EXECUTIVE_SUMMARY/: index.html
FAQ/: index.html
GLOSSARY/: index.html
ILSC_MRD_suite_15_modulos_CANON/: PATCH_NOTES_v8.md  README.md  RUN_ALL.py  RUN_ALL.sh  requirements.txt
ILSC_MRD_suite_extensions/: README.md  RUN_ALL_EXT.py  manifest.yaml
INDEX_CANONICAL/: index.html
JUDGES_LOCKS/: index.html
MRD_EXTENSIONS/: index.html
MRD_SUITE/: index.html
PREDICTIONS_REGISTRY/: index.html
RELEASING/: index.html
START_HERE/: index.html
TROUBLESHOOTING/: index.html
USAGE/: index.html
WORKFLOWS/: index.html
android/: settings.gradle.kts
docs/: CLI.es.md  CLI.md  EXECUTIVE_SUMMARY.es.md  EXECUTIVE_SUMMARY.md  FAQ.es.md  FAQ.md  GLOSSARY.es.md  GLOSSARY.md  INDEX_CANONICAL.es.md  INDEX_CANONICAL.md  JUDGES_LOCKS.es.md  JUDGES_LOCKS.md  MRD_EXTENSIONS.es.md  MRD_EXTENSIONS.md  MRD_SUITE.es.md  MRD_SUITE.md  PREDICTIONS_REGISTRY.es.md  PREDICTIONS_REGISTRY.md  RELEASING.es.md  RELEASING.md  START_HERE.es.md  START_HERE.md  TROUBLESHOOTING.es.md  TROUBLESHOOTING.md  USAGE.es.md  USAGE.md  WORKFLOWS.es.md  WORKFLOWS.md  index.es.md  index.md
es/: index.html
occ/: __init__.py  ai_assistant.py  auth_system.py  catalog.py  cli.py  compiler.py  desktop.py  lab.py  module_autogen.py  offline_assistant.py  reason_codes.py  reporting.py  runner.py  science_research.py  suites.py  version.py
predictions/: README.md  TEMPLATE.yaml  registry.yaml
scripts/: bootstrap.ps1  bootstrap.sh  build_compendium_pdf.py  build_nuclear_addendum_pdf.py  build_windows_desktop.ps1  check_docs_i18n.py  ci_doctor.py  generate_release_notes.py  generate_windows_icon.py  mrd_flow.py  release_doctor.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
tests/: test_ai_assistant.py  test_auth_system.py  test_lab.py  (+9 more)
(+389 files in other folders)
