[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "occ"
version = "1.0.0"
description = "OCC command-line tooling"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "MarcoAIsaac" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[project.scripts]
occ = "occ.cli:main"

[tool.setuptools]
packages = ["occ"]
